sidenav change example text color to #696969

--- a/src/assets/examples/sidenav-fixed/sidenav-fixed.component.css
+++ b/src/assets/examples/sidenav-fixed/sidenav-fixed.component.css
@@ -1,6 +1,7 @@
 .example-container {
   height: 372px;
   text-align: left;
+  color: #696969;
 }
 
 .example-sidenav {
@@ -15,4 +16,12 @@
   margin: -56px 0px;
   display: block;
   height: 500px;
+}
+
+.mat-drawer {
+  color: #696969;
+}
+
+.mat-toolbar {
+  color: #696969;
 }
