--- a/src/assets/examples/sidenav-mode/sidenav-mode.component.css
+++ b/src/assets/examples/sidenav-mode/sidenav-mode.component.css
@@ -2,6 +2,7 @@
   height: 300px;
   margin: -56px 0px;
   text-align: left;
+  color: #696969;
 }
 
 .example-radio-group {
@@ -13,4 +14,8 @@
 
 .mat-radio-button {
   margin-left: 24px;
+}
+
+.mat-drawer {
+  color: #696969;
 }
