--- a/src/assets/examples/sidenav-open-close/sidenav-open-close.component.html
+++ b/src/assets/examples/sidenav-open-close/sidenav-open-close.component.html
@@ -6,7 +6,7 @@
 
   <mat-sidenav-content>
     <p><mat-checkbox [(ngModel)]="opened">sidenav.opened</mat-checkbox></p>
-    <p><button mat-button (click)="sidenav.toggle()">sidenav.toggle()</button></p>
+    <p><button mat-button (click)="sidenav.toggle()" color="primary">sidenav.toggle()</button></p>
     <p>Events:</p>
     <div class="example-events">
       <div *ngFor="let e of events">{{e}}</div>
