--- a/src/assets/examples/sidenav-autosize/sidenav-autosize.component.css
+++ b/src/assets/examples/sidenav-autosize/sidenav-autosize.component.css
@@ -3,6 +3,7 @@
   height: 300px;
   border: 1px solid rgba(0, 0, 0, 0.5);
   margin: 0 56px;
+  color: #696969;
 }
 
 .example-sidenav-content {
@@ -14,4 +15,8 @@
 
 .example-sidenav {
   padding: 20px;
+}
+
+.mat-drawer {
+  color: #696969;
 }
