--- a/src/assets/examples/sidenav-backdrop/sidenav-backdrop.component.css
+++ b/src/assets/examples/sidenav-backdrop/sidenav-backdrop.component.css
@@ -3,6 +3,7 @@
   height: 200px;
   margin: 0 56px;
   border: 1px solid #555;
+  color: #696969;
 }
 
 mat-drawer-content {
@@ -10,4 +11,8 @@ mat-drawer-content {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+}
+
+.mat-drawer {
+  color: #696969;
 }
