--- a/src/assets/examples/sidenav-drawer-overview/sidenav-drawer-overview.component.css
+++ b/src/assets/examples/sidenav-drawer-overview/sidenav-drawer-overview.component.css
@@ -4,4 +4,8 @@
   margin: 0 56px;
   border: 1px solid #555;
   text-align: left;
+  color: #696969;
+}
+.mat-drawer {
+  color: #696969 !important;
 }
