--- a/src/assets/examples/sidenav-open-close/sidenav-open-close.component.css
+++ b/src/assets/examples/sidenav-open-close/sidenav-open-close.component.css
@@ -2,11 +2,17 @@
   height: 386px;
   margin: -56px 0px;
   text-align: left;
+  color: #696969;
 }
 
 .example-events {
+  color: #696969;
   width: 300px;
   height: 200px;
   overflow: auto;
   border: 1px solid #555;
+}
+
+.mat-drawer {
+  color: #696969;
 }
