bottomsheet fix bug change guideline picture gap

--- a/src/assets/documents/components/bottomsheet.html
+++ b/src/assets/documents/components/bottomsheet.html
@@ -193,7 +193,7 @@
         <img
           src="assets/img/doc/bottomsheet-bottom-do.png"
           alt=""
-          height="95%"
+          height="397px"
         />
       </div>
       <div
@@ -203,7 +203,7 @@
         <img
           src="assets/img/doc/bottomsheet-bottom-dont.png"
           alt=""
-          height="95%"
+          height="397px"
         />
       </div>
     </div>
@@ -223,7 +223,7 @@
         <img
           src="assets/img/doc/bottomsheet-scrim-do.png"
           alt=""
-          height="95%"
+          height="397px"
         />
       </div>
       <div
@@ -233,7 +233,7 @@
         <img
           src="assets/img/doc/bottomsheet-scrim-dont.png"
           alt=""
-          height="95%"
+          height="397px"
         />
       </div>
     </div>
