table fix bug add custom label to specify example

--- a/src/assets/documents/components/table.html
+++ b/src/assets/documents/components/table.html
@@ -150,7 +150,7 @@
     </div>
 
     <div class="doc-title-4 mb-8">
-      Basic Table
+      Basic Table<span modified-label=""></span>
     </div>
     <div class="doc-desc-2 mb-16">
       Data tables can include three or more columns. A header row at the top
@@ -161,14 +161,14 @@
     </div>
 
     <div class="doc-title-4 mb-16">
-      Vizient Table with multiple Header rows
+      Vizient Table with multiple Header rows<span modified-label=""></span>
     </div>
     <div class="doc-example-container">
       <div app-docs-example="table-viz-multi-header"></div>
     </div>
 
     <div class="doc-title-4 mb-8">
-      Table with Expandable rows
+      Table with Expandable rows<span modified-label=""></span>
     </div>
     <div class="doc-desc-2 mb-16">
       Expandable row can be used to display multiple child rows.
