--- a/src/assets/examples/table-dynamic-columns/table-dynamic-columns.component.html
+++ b/src/assets/examples/table-dynamic-columns/table-dynamic-columns.component.html
@@ -2,7 +2,7 @@
 <button mat-stroked-button color="primary" (click)="removeColumn()"> Remove column </button>
 <button mat-stroked-button color="primary" (click)="shuffle()"> Shuffle </button>
 
-<table mat-table [dataSource]="data" class="mat-elevation-z8">
+<table mat-table [dataSource]="data" >
   <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumns">
     <th mat-header-cell *matHeaderCellDef> {{column}} </th>
     <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
