--- a/src/assets/examples/table-multiple-header-footer/table-multiple-header-footer.component.css
+++ b/src/assets/examples/table-multiple-header-footer/table-multiple-header-footer.component.css
@@ -1,5 +1,8 @@
 table {
   width: 100%;
+  background: #ffffff;
+  box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.07), 0 1px 10px 0 rgba(0, 0, 0, 0.06),
+    0 2px 4px -1px rgba(0, 0, 0, 0.1);
 }
 
 .example-first-header-row th {
@@ -15,7 +18,7 @@ table {
 }
 
 .example-second-footer-row td {
-  color: #900000;
+  color: #FF3333;
 }
 
 :host {
