--- a/src/assets/examples/table-overview/table-overview.component.css
+++ b/src/assets/examples/table-overview/table-overview.component.css
@@ -2,6 +2,12 @@ table {
   width: 100%;
 }
 
+.example-container {
+  background: #ffffff;
+  box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.07), 0 1px 10px 0 rgba(0, 0, 0, 0.06),
+    0 2px 4px -1px rgba(0, 0, 0, 0.1);
+}
+
 .mat-form-field {
   font-size: 14px;
   width: 100%;
