--- a/src/assets/examples/table-overview/table-overview.component.html
+++ b/src/assets/examples/table-overview/table-overview.component.html
@@ -2,7 +2,7 @@
   <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
 </mat-form-field>
 
-<div class="mat-elevation-z8">
+<div class="example-container">
   <table mat-table [dataSource]="dataSource" matSort>
 
     <!-- ID Column -->
