--- a/src/assets/examples/table-sorting/table-sorting.component.html
+++ b/src/assets/examples/table-sorting/table-sorting.component.html
@@ -1,4 +1,4 @@
-<table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+<table mat-table [dataSource]="dataSource" matSort >
 
   <!-- Position Column -->
   <ng-container matColumnDef="position">
