--- a/src/assets/examples/table-sticky-columns/table-sticky-columns.component.css
+++ b/src/assets/examples/table-sticky-columns/table-sticky-columns.component.css
@@ -2,6 +2,10 @@
   height: 400px;
   width: 550px;
   overflow: auto;
+
+  background: #ffffff;
+  box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.07), 0 1px 10px 0 rgba(0, 0, 0, 0.06),
+    0 2px 4px -1px rgba(0, 0, 0, 0.1);
 }
 
 table {
