--- a/src/assets/examples/table-sticky-footer/table-sticky-footer.component.css
+++ b/src/assets/examples/table-sticky-footer/table-sticky-footer.component.css
@@ -1,6 +1,10 @@
 .example-container {
   height: 270px;
   overflow: auto;
+
+  background: #ffffff;
+  box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.07), 0 1px 10px 0 rgba(0, 0, 0, 0.06),
+    0 2px 4px -1px rgba(0, 0, 0, 0.1);
 }
 
 table {
