--- a/src/assets/examples/table-sticky-footer/table-sticky-footer.component.html
+++ b/src/assets/examples/table-sticky-footer/table-sticky-footer.component.html
@@ -1,4 +1,4 @@
-<div class="example-container mat-elevation-z8">
+<div class="example-container">
   <table mat-table [dataSource]="transactions">
     <!-- Item Column -->
     <ng-container matColumnDef="item">
