--- a/src/assets/examples/select-overview/select-overview.component.html
+++ b/src/assets/examples/select-overview/select-overview.component.html
@@ -1,5 +1,7 @@
 <div class="example-container">
-  <h4>Basic mat-select</h4>
+  <div class="example-title">
+    Basic mat-select
+  </div>
   <mat-form-field>
     <mat-label>Favorite food</mat-label>
     <mat-select>
@@ -9,7 +11,9 @@
     </mat-select>
   </mat-form-field>
 
-  <h4>Basic native select</h4>
+  <div class="example-title">
+    Basic native select
+  </div>
   <mat-form-field>
     <mat-label>Cars</mat-label>
     <select matNativeControl required>
