--- a/src/assets/examples/select-form/select-form.component.html
+++ b/src/assets/examples/select-form/select-form.component.html
@@ -1,23 +1,27 @@
 <form>
-  <h4>mat-select</h4>
+  <div class="example-title">
+    mat-select
+  </div>
   <mat-form-field>
     <mat-label>Favorite food</mat-label>
     <mat-select [(ngModel)]="selectedValue" name="food">
       <mat-option *ngFor="let food of foods" [value]="food.value">
-        {{food.viewValue}}
+        {{ food.viewValue }}
       </mat-option>
     </mat-select>
   </mat-form-field>
-  <p> Selected food: {{selectedValue}} </p>
-  <h4>native html select</h4>
+  <div class="example-result">Selected food: {{ selectedValue }}</div>
+  <div class="example-title">
+    native html select
+  </div>
   <mat-form-field>
     <mat-label>Favorite car</mat-label>
     <select matNativeControl [(ngModel)]="selectedCar" name="car">
       <option value="" selected></option>
       <option *ngFor="let car of cars" [value]="car.value">
-        {{car.viewValue}}
+        {{ car.viewValue }}
       </option>
     </select>
   </mat-form-field>
-  <p> Selected car: {{selectedCar}} </p>
+  <div class="example-result">Selected car: {{ selectedCar }}</div>
 </form>
