input fix bug example gap

--- a/src/assets/examples/input-overview/input-overview.component.html
+++ b/src/assets/examples/input-overview/input-overview.component.html
@@ -1,5 +1,5 @@
 <form class="example-form">
-  <mat-form-field class="example-full-width">
+  <mat-form-field class="example-full-width first-one">
     <input matInput placeholder="Favorite food" value="Sushi">
   </mat-form-field>
 
