--- a/src/assets/examples/select-reset/select-reset.component.html
+++ b/src/assets/examples/select-reset/select-reset.component.html
@@ -1,6 +1,8 @@
 <div class="example-container">
-  <h4>mat-select</h4>
-  <mat-form-field>
+  <div class="example-title">
+    mat-select
+  </div>
+  <mat-form-field class="first-one">
     <mat-label>State</mat-label>
     <mat-select>
       <mat-option>None</mat-option>
@@ -10,7 +12,9 @@
     </mat-select>
   </mat-form-field>
 
-  <h4>native html select</h4>
+  <div class="example-title">
+    native html select
+  </div>
   <mat-form-field>
     <mat-label>Select your car</mat-label>
     <select matNativeControl id="mySelectId">
