--- a/src/assets/examples/select-disabled/select-disabled.component.css
+++ b/src/assets/examples/select-disabled/select-disabled.component.css
@@ -7,3 +7,17 @@ p {
   text-align: left;
   margin: 0 auto;
 }
+
+.example-title {
+  height: 24px;
+  width: 77px;
+  color: #696969;
+  font-family: 'Soleto Trial';
+  font-size: 16px;
+  line-height: 24px;
+  margin-bottom: 16px;
+}
+
+.first-one {
+  margin-bottom: 36px;
+}
