--- a/src/assets/examples/select-error-state-matcher/select-error-state-matcher.component.css
+++ b/src/assets/examples/select-error-state-matcher/select-error-state-matcher.component.css
@@ -3,3 +3,15 @@
   margin: 0 auto;
   text-align: left;
 }
+
+.example-title {
+  height: 24px;
+  width: 77px;
+  color: #696969;
+  font-size: 16px;
+  line-height: 24px;
+}
+
+.first-one {
+  margin-bottom: 36px;
+}
