--- a/src/assets/examples/select-error-state-matcher/select-error-state-matcher.component.html
+++ b/src/assets/examples/select-error-state-matcher/select-error-state-matcher.component.html
@@ -1,6 +1,8 @@
 <div class="example-container">
-  <h4>mat-select</h4>
-  <mat-form-field>
+  <div class="example-title">
+    mat-select
+  </div>
+  <mat-form-field class="first-one">
     <mat-label>Choose one</mat-label>
     <mat-select [formControl]="selected" [errorStateMatcher]="matcher">
       <mat-option>Clear</mat-option>
@@ -18,7 +20,9 @@
     </mat-error>
   </mat-form-field>
 
-  <h4>native html select</h4>
+  <div class="example-title">
+    native html select
+  </div>
   <mat-form-field class="demo-full-width">
     <mat-label>Choose one</mat-label>
     <select
