--- a/src/assets/examples/select-hint-error/select-hint-error.component.css
+++ b/src/assets/examples/select-hint-error/select-hint-error.component.css
@@ -3,3 +3,16 @@
   margin: 0 auto;
   text-align: left;
 }
+
+.example-title {
+  height: 24px;
+  width: 77px;
+  color: #696969;
+  font-size: 16px;
+  line-height: 24px;
+  margin-bottom: 16px;
+}
+
+.first-one {
+  margin-bottom: 36px;
+}
