--- a/src/assets/examples/select-hint-error/select-hint-error.component.html
+++ b/src/assets/examples/select-hint-error/select-hint-error.component.html
@@ -1,6 +1,8 @@
 <div class="example-container">
-  <h4>mat select</h4>
-  <mat-form-field>
+  <div class="example-title">
+    mat select
+  </div>
+  <mat-form-field class="first-one">
     <mat-label>Favorite animal</mat-label>
     <mat-select [formControl]="animalControl" required>
       <mat-option>--</mat-option>
@@ -14,7 +16,9 @@
     <mat-hint>{{ animalControl.value?.sound }}</mat-hint>
   </mat-form-field>
 
-  <h4>native html select</h4>
+  <div class="example-title">
+    native html select
+  </div>
   <mat-form-field>
     <mat-label>Select your car (required)</mat-label>
     <select matNativeControl required [formControl]="selectFormControl">
