--- a/src/assets/examples/select-optgroup/select-optgroup.component.html
+++ b/src/assets/examples/select-optgroup/select-optgroup.component.html
@@ -1,6 +1,8 @@
 <div class="example-container">
-  <h4>mat-select</h4>
-  <mat-form-field>
+  <div class="example-title">
+    mat-select
+  </div>
+  <mat-form-field class="first-one">
     <mat-label>Pokemon</mat-label>
     <mat-select [formControl]="pokemonControl">
       <mat-option>-- None --</mat-option>
@@ -19,7 +21,9 @@
     </mat-select>
   </mat-form-field>
 
-  <h4>native html select</h4>
+  <div class="example-title">
+    native html select
+  </div>
   <mat-form-field>
     <mat-label>Cars</mat-label>
     <select matNativeControl>
