table fix bug header color and font weight

--- a/libs/style.scss
+++ b/libs/style.scss
@@ -482,6 +482,11 @@ mat-chip {
 //paginator
 
 //table
+.mat-header-cell {
+  color: $viz-dark-gray !important;
+} 
+
+
 .viz-table {
   width: 100%;
 
