--- a/src/assets/examples/form-field-hint/form-field-hint.component.css
+++ b/src/assets/examples/form-field-hint/form-field-hint.component.css
@@ -8,3 +8,11 @@
 .example-container > * {
   width: 100%;
 }
+
+.mat-form-field {
+  width: 360px;
+}
+
+.mat-form-field:not(:last-child) {
+  margin: 0 auto 36px auto;
+}
