--- a/src/assets/examples/form-field-label/form-field-label.component.css
+++ b/src/assets/examples/form-field-label/form-field-label.component.css
@@ -2,13 +2,10 @@
   display: flex;
   flex-direction: column;
   text-align: left;
-  
 }
 
-
-
 .example-container form {
-  margin-bottom: 20px;
+  margin-bottom: 56px;
   margin-left: 56px;
 }
 
@@ -20,7 +17,16 @@
   margin: 0 12px;
 }
 
+.example-field-container {
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+
 .mat-form-field {
   width: 360px;
-  margin: 0 auto;
+}
+
+.mat-form-field:not(:last-child) {
+  margin: 0 auto 36px auto;
 }
