--- a/src/assets/examples/input-form/input-form.component.html
+++ b/src/assets/examples/input-form/input-form.component.html
@@ -6,44 +6,36 @@
   <table class="example-full-width" cellspacing="0">
     <tr>
       <td>
-        <mat-form-field class="example-full-width">
+        <mat-form-field class="example-full-width-half">
           <input matInput placeholder="First name" />
         </mat-form-field>
       </td>
       <td>
-        <mat-form-field class="example-full-width">
+        <mat-form-field class="example-full-width-half">
           <input matInput placeholder="Long Last Name That Will Be Truncated" />
         </mat-form-field>
       </td>
     </tr>
   </table>
 
-  <table cellspacing="0">
-    <tr>
-      <td>
-        <mat-form-field class="example-full-width">
-          <textarea matInput placeholder="Address">
-1600 Amphitheatre Pkwy</textarea
-          >
-        </mat-form-field>
-      </td>
-      <td>
-        <mat-form-field class="example-full-width">
-          <textarea matInput placeholder="Address 2"></textarea>
-        </mat-form-field>
-      </td>
-    </tr>
-  </table>
+  <p>
+    <mat-form-field class="example-full-width">
+      <textarea matInput placeholder="Address">1600 Amphitheatre Pkwy</textarea>
+    </mat-form-field>
+    <mat-form-field class="example-full-width">
+      <textarea matInput placeholder="Address 2"></textarea>
+    </mat-form-field>
+  </p>
 
-  <table cellspacing="0">
+  <table class="example-full-width" cellspacing="0">
     <tr>
       <td>
-        <mat-form-field class="example-full-width">
+        <mat-form-field class="example-full-width-three">
           <input matInput placeholder="City" />
         </mat-form-field>
       </td>
       <td>
-        <mat-form-field class="example-full-width">
+        <mat-form-field class="example-full-width-three">
           <input matInput placeholder="State" />
         </mat-form-field>
       </td>
