input fix bug modify example

--- a/src/assets/examples/input-form/input-form.component.html
+++ b/src/assets/examples/input-form/input-form.component.html
@@ -6,12 +6,12 @@
   <table class="example-full-width" cellspacing="0">
     <tr>
       <td>
-        <mat-form-field class="example-full-width-half">
+        <mat-form-field class="example-full-width">
           <input matInput placeholder="First name" />
         </mat-form-field>
       </td>
       <td>
-        <mat-form-field class="example-full-width-half">
+        <mat-form-field class="example-full-width">
           <input matInput placeholder="Long Last Name That Will Be Truncated" />
         </mat-form-field>
       </td>
@@ -30,12 +30,12 @@
   <table class="example-full-width" cellspacing="0">
     <tr>
       <td>
-        <mat-form-field class="example-full-width-three">
+        <mat-form-field class="example-full-width">
           <input matInput placeholder="City" />
         </mat-form-field>
       </td>
       <td>
-        <mat-form-field class="example-full-width-three">
+        <mat-form-field class="example-full-width">
           <input matInput placeholder="State" />
         </mat-form-field>
       </td>
