table fix bug add last three examples

--- a/src/assets/documents/components/table.html
+++ b/src/assets/documents/components/table.html
@@ -464,8 +464,7 @@
     </div>
 
     <div class="doc-desc-2">
-      As for expanded rows, use grey background color with top and bottom
-      shadows to distinguish from main rows.
+      Actions should be always on the right side of the table.
     </div>
 
     <div class="docs-guideline-group">
