--- a/libs/components/chart/viz-chart.component.html
+++ b/libs/components/chart/viz-chart.component.html
@@ -1,3 +1,3 @@
-<!-- <div [ngStyle]="{'width': width, 'height': height}" #chart>
+<div [ngStyle]="{'width': width, 'height': height}" #chart>
 
-</div> -->
+</div>
