--- a/src/assets/examples/table-viz-basic/table-viz-basic.component.html
+++ b/src/assets/examples/table-viz-basic/table-viz-basic.component.html
@@ -1,1 +1,23 @@
-<p>TableVizBasicComponent Ready</p>
+<div class="example-container">
+  <div
+    matSort
+    class="viz-table mat-elevation-z2"
+    (matSortChange)="sortData($event)"
+  >
+    <div class="viz-table-row ">
+      <div class="viz-table-head w70" >
+        AVAILALBLE CONTRACT
+      </div>
+      <div class="viz-table-head w30">TYPE</div>
+    </div>
+
+    <ng-container *ngFor="let contract of sortedData">
+      <div class="viz-table-row">
+        <div class="viz-table-cell w70 example-first-col">
+          {{ contract.name }}
+        </div>
+        <div class="viz-table-cell w30">{{ contract.type }}</div>
+      </div>
+    </ng-container>
+  </div>
+</div>
