table fix bug fix custom example style

--- a/src/assets/examples/table-native/table-native.component.html
+++ b/src/assets/examples/table-native/table-native.component.html
@@ -1,9 +1,9 @@
 <div class="example-container">
   <div matSort class="viz-table mat-elevation-z2" (matSortChange)="sortData($event)">
     <div class="viz-table-row ">
-      <div class="viz-table-head w70" mat-sort-header="contract">
-        AVAILALBLE CONTRACT</div>
-      <div class="viz-table-head w30" mat-sort-header="type">TYPE</div>
+      <div class="viz-table-head w70" >
+        AVAILALBLE CONTRACTS</div>
+      <div class="viz-table-head w30" >TYPE</div>
     </div>
 
     <ng-container *ngFor="let dessert of sortedData">
