--- a/src/assets/examples/table-viz-basic/table-viz-basic.component.html
+++ b/src/assets/examples/table-viz-basic/table-viz-basic.component.html
@@ -6,7 +6,7 @@
   >
     <div class="viz-table-row ">
       <div class="viz-table-head w70" >
-        AVAILALBLE CONTRACT
+        AVAILALBLE CONTRACTS
       </div>
       <div class="viz-table-head w30">TYPE</div>
     </div>
