--- a/src/assets/examples/table-viz-multi-header/table-viz-multi-header.component.html
+++ b/src/assets/examples/table-viz-multi-header/table-viz-multi-header.component.html
@@ -5,9 +5,9 @@
   <div matSort class="viz-table" (matSortChange)="sortData($event)">
     <div class="viz-table-row ">
       <div class="viz-table-head w70">
-        AVAILALBLE CONTRACT
+        EXCEPTION TYPE
       </div>
-      <div class="viz-table-head w30">TYPE</div>
+      <div class="viz-table-head w30">PRIORITY</div>
     </div>
 
     <ng-container *ngFor="let contract of sortedData">
