--- a/libs/components/table/viz-show-expand/viz-show-expand.component.html
+++ b/libs/components/table/viz-show-expand/viz-show-expand.component.html
@@ -1,3 +1,3 @@
 <mat-icon [@expandState]="expandState" (click)="toggleExpand()">
-    keyboard_arrow_up</mat-icon>
+    keyboard_arrow_down</mat-icon>
 <ng-content></ng-content>
