--- a/libs/style.scss
+++ b/libs/style.scss
@@ -513,7 +513,7 @@ mat-chip {
     box-sizing: border-box;
     font-size: 10px;
     color: #9f9f9f;
-
+    letter-spacing: 1.5px;
     line-height: 15px;
     font-weight: 700;
     .mat-sort-header-button {
