--- a/src/assets/examples/table-native/table-native.component.css
+++ b/src/assets/examples/table-native/table-native.component.css
@@ -73,9 +73,22 @@ td {
 }
 
 .expand-icon {
-  color: #c3c3c3;
+  color: #9f9f9f;
   margin-right: 12px;
   font-size: 24px;
   height: 24px;
   width: 24px;
+}
+
+.viz-table-cell:last-child {
+  padding-right: 24px;
+  justify-content: flex-end;
+}
+
+.viz-table-head:last-child {
+  justify-content: flex-end;
+}
+
+.viz-table-expand-row .viz-table-cell:last-child {
+  justify-content: end;
 }
