sidenav fix bug style issue on guideline and spec

--- a/src/assets/documents/components/sidenav.html
+++ b/src/assets/documents/components/sidenav.html
@@ -502,7 +502,9 @@
       >
         <div class="sidebar-seperate-bg">
           <div class="left">Sidenav content</div>
-          <div class="right">Main content</div>
+          <div class="right">
+            <span>Main Content</span>
+          </div>
         </div>
       </div>
       <div
