table fix bug fix shadow issue

--- a/src/assets/examples/table-viz-differ-element/table-viz-differ-element.component.html
+++ b/src/assets/examples/table-viz-differ-element/table-viz-differ-element.component.html
@@ -23,7 +23,7 @@
         [vizExpand]="test.isExpanded"
         style="overflow:hidden"
       >
-        <div class="expand-row-container">
+        <div class="expand-row-container viz-table-expand-row">
           <nav mat-tab-nav-bar color="primary">
             <a
               mat-tab-link
