--- a/libs/style.scss
+++ b/libs/style.scss
@@ -577,6 +577,10 @@ mat-chip {
       box-shadow: inset 0 1px 0 0 rgba(215, 221, 229, 0.5),
         inset 0 -1px 2px 0 rgba(0, 0, 0, 0.05);
     }
+    &:only-child {
+      box-shadow: inset 0 2px 4px 0 rgba(0, 0, 0, 0.07),
+        inset 0 1px 0 0 rgba(215, 221, 229, 0.5);
+    }
   }
 }
 
