--- a/src/assets/examples/table-viz-multi-header/table-viz-multi-header.component.css
+++ b/src/assets/examples/table-viz-multi-header/table-viz-multi-header.component.css
@@ -118,3 +118,8 @@ td {
 .viz-table-row:first-child {
   box-shadow: none;
 }
+
+.viz-table-row {
+  background: #ffffff;
+  box-shadow: 0 1px 0 0 #e9e9e9, inset 0 1px 0 0 #e9e9e9;
+}
