sidenav fix bug fix style on guideline and spec

--- a/src/assets/documents/components/sidenav.html
+++ b/src/assets/documents/components/sidenav.html
@@ -501,7 +501,7 @@
         style="height:271px"
       >
         <div class="sidebar-seperate-bg">
-          <div class="left">Sidenav content</div>
+          <div class="left"><span> Sidenav content</span></div>
           <div class="right">
             <span>Main Content</span>
           </div>
@@ -512,8 +512,10 @@
         style="height:271px"
       >
         <div class="sidebar-seperate-divider">
-          <div class="left">Sidenav content</div>
-          <div class="right">Main content</div>
+          <div class="left">
+            <span> Sidenav content</span>
+          </div>
+          <div class="right"><span> Main content</span></div>
         </div>
       </div>
       <div
@@ -521,8 +523,8 @@
         style="height:271px"
       >
         <div class="sidebar-seperate-dont">
-          <div class="left">Sidenav content</div>
-          <div class="right">Main content</div>
+          <div class="left"><span>Sidenav content</span></div>
+          <div class="right"><span>Main content</span></div>
         </div>
       </div>
     </div>
